fix custom cursor on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 a, svg, .btn {
-    cursor: none !important;
+    @apply cursor-auto lg:cursor-none; 
 }
